<resources>
    <string name="app_name">Time Pe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="timepe">TimePe!</string>
    <string name="singup">SingUp</string>
    <string name="already_user_login_here">Already User Login Here</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="verify">Verify</string>
    <string name="sign_up_with_phone">Sign Up With Phone</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="your_thoughts">Your Thoughts!!</string>
</resources>