<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FADCDC"
    tools:context=".Activity.SignInActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:lottie_rawRes="@raw/login"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/animation"
        android:hint="@string/email_address"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:padding="10sp" />

    <EditText
        android:id="@+id/etxtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:padding="10sp" />

    <Button
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etxtpassword"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:textColor="#000000"
        android:text="@string/verify" />

    <TextView
        android:id="@+id/toregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify"
        android:layout_marginEnd="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="New User!!"
        android:paddingEnd="20sp"
        />

    <RelativeLayout
        android:id="@+id/btnfbgoogle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/toregister"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/google"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:padding="15dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/google"
            android:focusable="true" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/facebook"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="93dp"
            android:layout_marginEnd="26dp"
            android:layout_toEndOf="@id/google"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/facebook" />

    </RelativeLayout>

    <TextView
        android:id="@+id/signPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnfbgoogle"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_with_phone"
        android:textSize="19sp" />


</RelativeLayout>