<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:lottie_rawRes="@raw/verify"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_below="@id/animation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/phoneNumberEt"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:imeActionId="6"
            android:imeActionLabel="Send"
            android:imeOptions="actionUnspecified"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20sp" />

    </LinearLayout>



    <Button
        android:id="@+id/generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/generate_otp" />

    <EditText
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/generate"
        android:hint="@string/otp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="number"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:padding="10sp" />

    <Button
        android:id="@+id/verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:enabled="false"
        android:text="@string/verify_otp" />

    <ProgressBar
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/verify"/>

</RelativeLayout>